# examples

./: .gitignore  Cargo.toml  README.md  build.rs  pubspec.yaml
lib/: button.dart  drag_drop.dart  file_open_dialog.dart  home.dart  main.dart  main_window.dart  menu.dart  menu_bar_window.dart  modal.dart  page.dart  platform_channels.dart  util.dart  window_management.dart
lib/pages/: drag_drop.dart  file_open_dialog.dart  flutter_plugins.dart  menu.dart  modal_window.dart  other_window.dart  platform_channels.dart  window_management.dart
lib/widgets/: intrinsic_limited_box.dart  page.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: file_open_dialog.rs  file_open_dialog_linux.rs  file_open_dialog_mac.rs  file_open_dialog_win.rs  main.rs  platform_channels.rs
test/: widget_test.dart
