[package]
name = "nativeshell_examples"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.1"
nativeshell_build = { version = "0.1.4" }

[dependencies]
nativeshell = { version = "0.1.5" }
env_logger = "0.8.3"
serde = { version = "1.0.119", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.11.0"
widestring = "0.4.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.9.2"
