[package]
name = "nativeshell_examples"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.2.1"
nativeshell_build = { version = "0.1.10" }

[dependencies]
nativeshell = { version = "0.1.12" }
env_logger = "0.9.0"
serde = { version = "1.0.119", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.28.0"
features = [
    "Win32_UI_Controls_Dialogs"
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.14.0"
